--- a/nodedir/content/committee/ce.html
+++ b/nodedir/content/committee/ce.html
@@ -58,7 +58,7 @@
         <h1>
             Community Engagement
         </h1>
-        <p style="max-width:900px; padding: 20px; margin: 0 auto;padding-top: 0px;">
+        <p style="max-width:900px; padding: 40px; margin: 0 auto;padding-top: 0px;">
             The Community Engagement (CE) Committee is dedicated to collaborating with all of the departments and committees in the office to establish relationships with Cal stakeholders, engage and share resources and events with the Berkeley community, and work to uplift internal projects to be as equitable and as inclusive as possible.
         </p>
         <style>
@@ -70,11 +70,10 @@
                 color: white;
             }
             #first-section h1 {
-                max-width: 900px;
                 margin: 0 auto;
                 text-align: center;
                 font-family: rig-solid-medium-outline, sans-serif;
-                color: #E9DE81; /*#ffee58;*/
+                color: #E9DE81;
                 font-size: 4.5em;
                 padding: 20px 0;
             }
@@ -122,6 +121,16 @@
                 Zach Neff is a third-year studying Political Science and a member of the Cal Varsity Rugby team. Hailing from Sacramento, California, Zach has a passion for Public Policy and Public Organization. He embraces intersectionality and seeks to advance community empathy and tolerance for all walks of people.  Zach is a member of the Pi Kappa Alpha fraternity and is the co-founder of the POC in Greek Life club. In his free time he enjoys deep conversations, long walks on the beach, and kicking it.
                 </p>
             </a>
+        </div>
+    </div>
+
+    <div id="intern-section">
+        <div class="intern">
+            <img src="ce/Helen.jpg" align="CENTER"/>
+            <h2>CE Intern</h2>
+            <h3>Helen Wang</h3>
+            <p>Helen is a second-year student intended to major in Applied Mathematics, with a possible minor in Statistics. She is currently serving as a Community Engagement Intern in Senator Tellem’s Office. Having been raised in a place with a relatively homogenous population, Boise, Idaho, she wants to make sure diversity and inclusion are not only ongoing conversations, but that changes are being actively worked for and implemented in a world filled with systemic racism. Helen loves music, meeting new people, napping, and cooking. No, she does not do the cleaning.
+            </p>
         </div>
     </div>
 
@@ -215,10 +224,10 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.55em;
+        font-size: 1.5em;
         color: white;
         text-align: center;
-        padding-bottom: 80px;
+        padding-bottom: 92px;
     }
 
     #second-section .bordertext {
@@ -309,7 +318,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
         font-style: normal;
-        font-size: .55em;
+        font-size: .6em;
         color: #1f2630;
         text-align: center;
         padding-bottom: 63px;
@@ -337,7 +346,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
         font-style: normal;
-        font-size: .55em;
+        font-size: .6em;
         color: #1f2630;
         text-align: center;
         padding-bottom: 63px;
@@ -363,7 +372,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
         font-style: normal;
-        font-size: .55em;
+        font-size: .6em;
         color: #1f2630;
         text-align: center;
         padding-bottom: 63px;
@@ -383,8 +392,78 @@
         right: 50%;
         transform: translate(50%, -50%);
         margin: 0;
-        width: 100%;
+        width: 140%;
         word-wrap: break-word;
+    }
+
+    #intern-section {
+        position: relative;
+        height: auto;
+    }
+
+
+    #intern-section .intern {
+        position: relative;
+        display: inline-block;
+        width: 100%;
+        background-color: #070F2E;
+        padding-bottom: 0;
+        overflow: hidden;
+    }
+
+    #intern-section h2 {
+        top: 20px;
+        padding-top: 100px;
+        padding-left: 100px;
+        position: absolute;
+        max-width: calc(100% - 40px);
+        width: calc(100% - 40px);
+        display: block;
+        font-family: sofia-pro, sans-serif;
+        font-style: normal;
+        font-size: 3.75em;
+        color: white;
+        text-align: left;
+        justify-content: center;
+
+    }
+
+    #intern-section h3 {
+        position: relative;
+        top: -480px;
+        right: -350px;
+        max-width: calc(100% - 40px);
+        width: calc(100% - 40px);
+        display: inline-block;
+        font-family: montserrat, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 2.5em;
+        color: #E9DE81;
+        text-align: center;
+    }
+
+
+    #intern-section p {
+        position: relative;
+        top: -520px;
+        right: -810px;
+        display: inline-block;
+        width: 400px;
+        font-family: montserrat, sans-serif;
+        font-weight: 200;
+        font-style: normal;
+        font-size: 1.1em;
+        color: white;
+        text-align: center;
+    }
+
+    #intern-section img {
+        width: 20%;
+        margin: 40px;
+        margin-right: 10px;
+        padding-left: 500px;
+        margin-left: 0px;
     }
 
 
