--- a/committee/ce.html
+++ b/committee/ce.html
@@ -88,7 +88,6 @@
             <h3>CE Chair</h3>
             <p>Isabel Huerta is a sophomore double majoring in Political Science and Ethnic Studies and pursuing a minor in Race and Law. Born and raised in Santa Barbara, she hopes to dismantle institutional white supremacy in schools, by writing anti-racist school policy and targeting the very curriculum that is taught in K-12 education #ethnicstudies. In her free time, she loves making charcuterie boards, learning tiktok dances, and spending an entire day at the beach.</p>
             </div>
-
         </div>
     </div>
 
@@ -318,7 +317,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
         font-style: normal;
-        font-size: .6em;
+        font-size: .65em;
         color: #1f2630;
         text-align: center;
         padding-bottom: 63px;
@@ -346,7 +345,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
         font-style: normal;
-        font-size: .6em;
+        font-size: .65em;
         color: #1f2630;
         text-align: center;
         padding-bottom: 63px;
@@ -372,7 +371,7 @@
         font-family: sofia-pro, sans-serif;
         font-weight: 600;
         font-style: normal;
-        font-size: .6em;
+        font-size: .65em;
         color: #1f2630;
         text-align: center;
         padding-bottom: 63px;
@@ -399,6 +398,7 @@
     #intern-section {
         position: relative;
         height: auto;
+        width: 100%;
     }
 
 
@@ -422,7 +422,7 @@
         font-family: sofia-pro, sans-serif;
         font-style: normal;
         font-size: 3.75em;
-        color: white;
+        color: #E9DE81;
         text-align: left;
         justify-content: center;
 
@@ -439,23 +439,26 @@
         font-weight: 400;
         font-style: normal;
         font-size: 2.5em;
-        color: #E9DE81;
+        color: white;
         text-align: center;
     }
 
 
     #intern-section p {
-        position: relative;
-        top: -520px;
-        right: -810px;
         display: inline-block;
+        position: relative;
+        top: -200px;
+        margin: 10px;
+        padding-top: 0px;
+        margin-top: 0px;
+        font-family: sofia-pro, sans-serif;
         width: 400px;
-        font-family: montserrat, sans-serif;
         font-weight: 200;
         font-style: normal;
-        font-size: 1.1em;
+        font-size: 1.2em;
         color: white;
         text-align: center;
+        padding-bottom: 63px;
     }
 
     #intern-section img {
