--- a/committee/ce.html
+++ b/committee/ce.html
@@ -58,7 +58,7 @@
         <h1>
             Community Engagement
         </h1>
-        <p style="max-width:900px; padding: 40px; margin: 0 auto;padding-top: 0px;">
+        <p style="max-width:900px; padding: 60px; margin: 0 auto;padding-top: 0px;">
             The Community Engagement (CE) Committee is dedicated to collaborating with all of the departments and committees in the office to establish relationships with Cal stakeholders, engage and share resources and events with the Berkeley community, and work to uplift internal projects to be as equitable and as inclusive as possible.
         </p>
         <style>
@@ -75,7 +75,7 @@
                 font-family: rig-solid-medium-outline, sans-serif;
                 color: #E9DE81;
                 font-size: 4.5em;
-                padding: 20px 0;
+                padding: 40px 0;
             }
         </style>
     </div>
@@ -128,8 +128,7 @@
             <img src="ce/Helen.jpg" align="CENTER"/>
             <h2>CE Intern</h2>
             <h3>Helen Wang</h3>
-            <p>Helen is a second-year student intended to major in Applied Mathematics, with a possible minor in Statistics. She is currently serving as a Community Engagement Intern in Senator Tellem’s Office. Having been raised in a place with a relatively homogenous population, Boise, Idaho, she wants to make sure diversity and inclusion are not only ongoing conversations, but that changes are being actively worked for and implemented in a world filled with systemic racism. Helen loves music, meeting new people, napping, and cooking. No, she does not do the cleaning.
-            </p>
+            <p>Helen is a second-year student intended to major in Applied Mathematics, with a possible minor in Statistics. She is currently serving as a Community Engagement Intern in Senator Tellem’s Office. Having been raised in a place with a relatively homogenous population, Boise, Idaho, she wants to make sure diversity and inclusion are not only ongoing conversations, but that changes are being actively worked for and implemented in a world filled with systemic racism. Helen loves music, meeting new people, napping, and cooking. No, she does not do the cleaning. </p>
         </div>
     </div>
 
@@ -399,6 +398,8 @@
         position: relative;
         height: auto;
         width: 100%;
+        margin-bottom: 0;
+        padding-bottom: 0;
     }
 
 
@@ -408,6 +409,7 @@
         width: 100%;
         background-color: #070F2E;
         padding-bottom: 0;
+        margin-bottom: 0;
         overflow: hidden;
     }
 
@@ -425,13 +427,15 @@
         color: #E9DE81;
         text-align: left;
         justify-content: center;
+        padding-bottom: 0px;
+        margin-bottom: 0px;
 
     }
 
     #intern-section h3 {
         position: relative;
-        top: -480px;
-        right: -350px;
+        top: -380px;
+        right: -400px;
         max-width: calc(100% - 40px);
         width: calc(100% - 40px);
         display: inline-block;
@@ -445,20 +449,20 @@
 
 
     #intern-section p {
-        display: inline-block;
         position: relative;
-        top: -200px;
-        margin: 10px;
-        padding-top: 0px;
-        margin-top: 0px;
-        font-family: sofia-pro, sans-serif;
-        width: 400px;
-        font-weight: 200;
+        top: -380px;
+        right: -800px;
+        max-width: 40%;
+        width: 40%;
+        display: inline-block;
+        font-family: montserrat, sans-serif;
+        font-weight: 400;
         font-style: normal;
-        font-size: 1.2em;
+        font-size: 1em;
         color: white;
         text-align: center;
-        padding-bottom: 63px;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
     }
 
     #intern-section img {
@@ -467,6 +471,7 @@
         margin-right: 10px;
         padding-left: 500px;
         margin-left: 0px;
+        margin-bottom: 0px;
     }
 
 
