--- a/committee/ce.html
+++ b/committee/ce.html
@@ -395,11 +395,11 @@
     }
 
     #intern-section {
+        color: black;
         position: relative;
         height: auto;
-        width: 100%;
-        margin-bottom: 0;
-        padding-bottom: 0;
+        padding: 0;
+        background-color: #070F2E;
     }
 
 
@@ -407,10 +407,8 @@
         position: relative;
         display: inline-block;
         width: 100%;
-        background-color: #070F2E;
         padding-bottom: 0;
         margin-bottom: 0;
-        overflow: hidden;
     }
 
     #intern-section h2 {
