--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <a href="https://asuc.org/">ASUC Website</a>
     </header>
     <div id="first-section">
-            <img class="chaka-img" src="GroupPhoto.png" />
+            <img class="chaka-img" src="committee/groupphoto.png" />
             <svg class="full" width="40%" viewBox="0 0 200 200">
                 <text fill="white" x="10" y="50%">
                     <tspan x="15%" y="25%">Meet ASUC</tspan>
