--- a/committee/ce.html
+++ b/committee/ce.html
@@ -106,7 +106,7 @@
             </a>
 
             <a href="#" class="sixth bianca">
-                <img src="ce/biancatorresmurray.png"/>
+                <img src="../biancatorresmurray.png"/>
                 <h2>Bianca Torres Murray</h2>
                 <p>
                  Bianca is a first-year from Los Angeles, CA who intends to major in Ethnic Studies. She is a Community Engagement Associate for Senator Tellem’s office. Bianca is very passionate about social justice, government, community engagement, and research. After Cal, Bianca hopes to attend law school. In her free time, Bianca enjoys taking walks, painting/drawing, exploring cities, traveling, and going to events.
@@ -114,7 +114,7 @@
             </a>
 
             <a href="#" class="sixth zach">
-                <img src="ce/zachneff.jpg"/>
+                <img src="../zachneff.jpg"/>
                 <h2>Zachary Neff</h2>
                 <p>
                 Zach Neff is a third-year studying Political Science and a member of the Cal Varsity Rugby team. Hailing from Sacramento, California, Zach has a passion for Public Policy and Public Organization. He embraces intersectionality and seeks to advance community empathy and tolerance for all walks of people.  Zach is a member of the Pi Kappa Alpha fraternity and is the co-founder of the POC in Greek Life club. In his free time he enjoys deep conversations, long walks on the beach, and kicking it.
