--- a/committee/ce.html
+++ b/committee/ce.html
@@ -82,7 +82,7 @@
 
     <div id="second-section">
         <div class="inner">
-            <img src="ce/izzyhuerta.jpg" align="LEFT"/>
+            <img src="ce/izzyhuerta.JPG" align="LEFT"/>
             <div class="bordertext">
             <h2>Izzy Huerta</h2>
             <h3>CE Chair</h3>
@@ -106,7 +106,7 @@
             </a>
 
             <a href="#" class="sixth bianca">
-                <img src="../biancatorresmurray.png"/>
+                <img src="ce/biancatorresmurray.png"/>
                 <h2>Bianca Torres Murray</h2>
                 <p>
                  Bianca is a first-year from Los Angeles, CA who intends to major in Ethnic Studies. She is a Community Engagement Associate for Senator Tellem’s office. Bianca is very passionate about social justice, government, community engagement, and research. After Cal, Bianca hopes to attend law school. In her free time, Bianca enjoys taking walks, painting/drawing, exploring cities, traveling, and going to events.
@@ -114,7 +114,7 @@
             </a>
 
             <a href="#" class="sixth zach">
-                <img src="../zachneff.jpg"/>
+                <img src="ce/zachneff.JPG"/>
                 <h2>Zachary Neff</h2>
                 <p>
                 Zach Neff is a third-year studying Political Science and a member of the Cal Varsity Rugby team. Hailing from Sacramento, California, Zach has a passion for Public Policy and Public Organization. He embraces intersectionality and seeks to advance community empathy and tolerance for all walks of people.  Zach is a member of the Pi Kappa Alpha fraternity and is the co-founder of the POC in Greek Life club. In his free time he enjoys deep conversations, long walks on the beach, and kicking it.
@@ -125,7 +125,7 @@
 
     <div id="intern-section">
         <div class="intern">
-            <img src="ce/Helen.jpg" align="CENTER"/>
+            <img src="ce/Helen.JPG" align="CENTER"/>
             <h2>CE Intern</h2>
             <h3>Helen Wang</h3>
             <p>Helen is a second-year student intended to major in Applied Mathematics, with a possible minor in Statistics. She is currently serving as a Community Engagement Intern in Senator Tellem’s Office. Having been raised in a place with a relatively homogenous population, Boise, Idaho, she wants to make sure diversity and inclusion are not only ongoing conversations, but that changes are being actively worked for and implemented in a world filled with systemic racism. Helen loves music, meeting new people, napping, and cooking. No, she does not do the cleaning. </p>
