--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 padding-top: 10px;
             }
         </style>
-        <a href="/">Home</a>
+        <a href="#home">Home</a>
         <div class="dropdown">
     		<button class="dropbtn">Resources 
       			<i class="fa fa-caret-down"></i>
@@ -49,89 +49,92 @@
     		</div>
   		</div>
         <a href="https://asuc.org/">ASUC Website</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
     </header>
     <div id="first-section">
-            <img class="chaka-img" src="committee/groupphoto.png" />
-            <svg class="full" width="40%" viewBox="0 0 200 200">
-                <text fill="white" x="10" y="50%">
-                    <tspan x="15%" y="25%">Meet ASUC</tspan>
-                    <tspan x="4" y="40%">Senator Tellem's</tspan>
-                    <tspan x="62" y="55%">Office</tspan>
-                </text>
-            </svg>
-            <style>
-                svg {
-                    position: absolute;
-                    top: 61%;
-                    right: 30.5%;
-                    transform: translate(0, -50%);
-                }
-                text {
-                    font-family: sofia-pro, sans-serif;
-                    font-size: 1.65em;
-                    font-weight: 400;
-                    padding: 0;
-                }
-            </style>
-        </div>
-        <div id="second-section">
-            <div class="inner">
-                <img src="SenatorTellem.png" align="LEFT"/>
-                <div class="bordertext">
+        <img class="chaka-img" src="committee/groupphoto.png" />
+        <svg class="full" width="40%" viewBox="0 0 200 200">
+            <text fill="white" x="10" y="50%">
+                <tspan x="15%" y="25%">Meet ASUC</tspan>
+                <tspan x="4" y="40%">Senator Tellem's</tspan>
+                <tspan x="62" y="55%">Office</tspan>
+            </text>
+        </svg>
+        <style>
+            svg {
+                position: absolute;
+                top: 61%;
+                right: 30.5%;
+                transform: translate(0, -50%);
+            }
+            text {
+                font-family: sofia-pro, sans-serif;
+                font-size: 1.65em;
+                font-weight: 400;
+                padding: 0;
+            }
+        </style>
+    </div>
+    <div id="second-section">
+        <div class="inner">
+            <img src="SenatorTellem.png" align="LEFT"/>
+            <div class="bordertext">
                 <h2>SENATOR TELLEM</h2><p>Chaka was elected as the Black Community-Endorsed Senator and is dedicated to assuring that communities on campus have the proper
                     access, resources, and knowledge to not only survive, but also thrive at Berkeley. The office aims to address Cal's campus climate,
                     advance academic and professional opportunities, and institutionalize environmental justice, while cultivating relationships between
                     different communities on and off campus. Our mission is to make Berkeley more inclusive and supportive for all students by amplifying
                     the voices of the most marginalized and assuring that everyone has a positive experience here at Cal.</p>
-                </div>
-
             </div>
+
         </div>
-        <div id="third-section">
-        	<div class="title">
-		        <h2>Segments of Our Office</h2>
-		    </div>
-            <div class="toprow">
-		        <a href="committee/ce.html" class="sixth ce">
-		            <img src="committee/ce/ce-logo.png"/>
-		            <p>Community Engagement</p>
-		        </a>
-		        <a href="committee/apo.html" class="sixth apo">
-		            <img src="committee/apo/apo-logo.png"/>
-		            <p>Academic & Professional Opportunities</p>
-		        </a>
-	            <a href="committee/ej.html" class="sixth ej">
-		            <img src="committee/ej/ej-logo.png"/>
-		            <p>Environmental Justice</p>
-		        </a>
-		    </div>
-		    <div class="bottomrow">
-		        <a href="committee/cc.html" class="sixthtwo cc">
-		            <img src="committee/cc/cc-logo.png"/>
-		            <p>Campus Climate</p>
-		        </a>
-		        <a href="committee/tech.html" class="sixthtwo tech">
-		            <img src="committee/tech/tech-logo.png"/>
-		            <p>Technology</p>
-		        </a>
-		        <a href="committee/legislative.html" class="sixthtwo leg">
-		            <img src="committee/leg/legislative-logo.png"/>
-		            <p>Legislative</p>
-		        </a>
-		    </div>
-        </div>
-        <div id="fourth-section">
-            <div class="inner">
+    </div>
+    <div id="third-section">
+        <div class="title">
+	        <h2>Segments of Our Office</h2>
+	    </div>
+        <div class="toprow">
+	        <a href="committee/ce.html" class="sixth ce">
+	            <img src="committee/ce/ce-logo.png"/>
+		          <p>Community Engagement</p>
+		    </a>
+		    <a href="committee/apo.html" class="sixth apo">
+		        <img src="committee/apo/apo-logo.png"/>
+	            <p>Academic & Professional Opportunities</p>
+	        </a>
+	        <a href="committee/ej.html" class="sixth ej">
+		        <img src="committee/ej/ej-logo.png"/>
+	            <p>Environmental Justice</p>
+		      </a>
+	    </div>
+		<div class="bottomrow">
+	        <a href="committee/cc.html" class="sixthtwo cc">
+		        <img src="committee/cc/cc-logo.png"/>
+		        <p>Campus Climate</p>
+		    </a>
+		    <a href="committee/tech.html" class="sixthtwo tech">
+		        <img src="committee/tech/tech-logo.png"/>
+		        <p>Technology</p>
+		    </a>
+		    <a href="committee/legislative.html" class="sixthtwo leg">
+		        <img src="committee/leg/legislative-logo.png"/>
+		        <p>Legislative</p>
+		    </a>
+		</div>
+    </div>
+    <div id="fourth-section">
+        <div class="inner">
             <img src="ejEvent.jpg" align="LEFT"/><img src="LawEvent.jpg" align="RIGHT"/>
             <h2>Past Events</h2>
             </div>
-        </div>
+    </div>
 
-        <footer>
-            <a href="https://www.instagram.com/asucsenatortellem/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://www.facebook.com/ChakaTellem.ASUCsenator"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-            <a href="https://twitter.com/SenatorTellem"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-        </footer>
+    <footer>
+        <a href="https://www.instagram.com/asucsenatortellem/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/ChakaTellem.ASUCsenator"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/SenatorTellem"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+    </footer>
 
 </body>
 </html>
