--- a/index.html
+++ b/index.html
@@ -130,6 +130,17 @@
             </div>
     </div>
 
+    <script>
+    function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+            x.className += " responsive";
+        } else {
+            x.className = "topnav";
+        }
+    }
+    </script>
+
     <footer>
         <a href="https://www.instagram.com/asucsenatortellem/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <a href="https://www.facebook.com/ChakaTellem.ASUCsenator"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
