--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./index_styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-    <header id='mainHeader'>
+    <header id="mainHeader">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <style>
             .TellemLogo {
@@ -25,7 +25,6 @@
     		<div class="dropdown-content">
       			<a href="#">Office Hours</a>
       			<a href="#">Events</a>
-      			<a href="#">Link 3</a>
     		</div>
   		</div>
   		<div class="dropdown">
