--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./index_styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-    <header id="mainHeader">
+    <header class="mainHeader" id="myMainHeader">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
         <style>
             .TellemLogo {
