--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
 
     <script>
     function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
+        var x = document.getElementById("myMainHeader");
+        if (x.className === "mainHeader" || x.className == "dropdown") {
             x.className += " responsive";
         } else {
-            x.className = "topnav";
+            x.className = "mainHeader";
         }
     }
     </script>
