--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <script>
     function myFunction() {
         var x = document.getElementById("myMainHeader");
-        if (x.className === "mainHeader") {
+        if (x.className === "mainHeader" || x.className === "dropdown") {
             x.className += "responsive";
         } else {
             x.className = "mainHeader";
