--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     		<button class="dropbtn">Resources 
       			<i class="fa fa-caret-down"></i>
     		</button>
-    		<div class="dropdown-content" id="myMainHeader">
+    		<div class="dropdown-content" id="dropHeader">
       			<a href="#">Office Hours</a>
       			<a href="#">Events</a>
                 <a href="https://asuc.org/">ASUC Website</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <a href="javascript:void(0);" class="icon" onclick="dropFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
     		</div>
@@ -36,11 +36,11 @@
     		<button class="dropbtn">Departments 
       			<i class="fa fa-caret-down"></i>
     		</button>
-    		<div class="dropdown-content" id="myMainHeader">
+    		<div class="dropdown-content" id="dropHeader">
       			<a href="committee/apo.html">Academic and Professional Opportunities</a>
       			<a href="committee/cc.html">Campus Climate</a>
       			<a href="committee/ej.html">Environmental Justice</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <a href="javascript:void(0);" class="icon" onclick="dropFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
     		</div>
@@ -49,11 +49,11 @@
     		<button class="dropbtn">Committees 
       			<i class="fa fa-caret-down"></i>
     		</button>
-    		<div class="dropdown-content" id="myMainHeader">
+    		<div class="dropdown-content" id="dropHeader">
       			<a href="committee/ce.html">Community Engagement</a>
       			<a href="committee/legislative.html">Legislative</a>
       			<a href="committee/tech.html">Technology</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <a href="javascript:void(0);" class="icon" onclick="dropFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
     		</div>
@@ -146,6 +146,16 @@
             x.className += "responsive";
         } else {
             x.className = "mainHeader";
+        }
+
+    }
+
+    function dropFunction() {
+        var x = document.getElementById("dropHeader");
+        if (x.className === "dropdown-content") {
+            x.className += "responsive";
+        } else {
+            x.className = "dropdown-content";
         }
 
     }
