--- a/index.html
+++ b/index.html
@@ -9,59 +9,45 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></script>
 </head>
 <body>
-    <header class="mainHeader" id="myMainHeader">
+    
+    <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
-        <style>
-            .TellemLogo {
-                text-align: left;
-                padding-left: 20px;
-                padding-top: 10px;
-            }
-        </style>
-        <a href="#home">Home</a>
+        <a href="#home" class="active">Home</a>
         <div class="dropdown">
-    		<button class="dropbtn">Resources 
-      			<i class="fa fa-caret-down"></i>
-    		</button>
-    		<div class="dropdown-content" id="dropHeader">
-      			<a href="#">Office Hours</a>
-      			<a href="#">Events</a>
+            <button class="dropbtn">Resources 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#">Office Hours</a>
+                <a href="#">Events</a>
                 <a href="https://asuc.org/">ASUC Website</a>
-                <a href="javascript:void(0);" class="icon" onclick="dropFunction()">
-                    <i class="fa fa-bars"></i>
-                </a>
-    		</div>
-  		</div>
-  		<div class="dropdown">
-    		<button class="dropbtn">Departments 
-      			<i class="fa fa-caret-down"></i>
-    		</button>
-    		<div class="dropdown-content" id="dropHeader">
-      			<a href="committee/apo.html">Academic and Professional Opportunities</a>
-      			<a href="committee/cc.html">Campus Climate</a>
-      			<a href="committee/ej.html">Environmental Justice</a>
-                <a href="javascript:void(0);" class="icon" onclick="dropFunction()">
-                    <i class="fa fa-bars"></i>
-                </a>
-    		</div>
-  		</div>
-  		<div class="dropdown">
-    		<button class="dropbtn">Committees 
-      			<i class="fa fa-caret-down"></i>
-    		</button>
-    		<div class="dropdown-content" id="dropHeader">
-      			<a href="committee/ce.html">Community Engagement</a>
-      			<a href="committee/legislative.html">Legislative</a>
-      			<a href="committee/tech.html">Technology</a>
-                <a href="javascript:void(0);" class="icon" onclick="dropFunction()">
-                    <i class="fa fa-bars"></i>
-                </a>
-    		</div>
-  		</div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-    </header>
+            </div>
+        </div> 
+        <div class="dropdown">
+            <button class="dropbtn">Departments 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="committee/apo.html">Academic and Professional Opportunities</a>
+                <a href="committee/cc.html">Campus Climate</a>
+                <a href="committee/ej.html">Environmental Justice</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Committees 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="committee/ce.html">Community Engagement</a>
+                <a href="committee/legislative.html">Legislative</a>
+                <a href="committee/tech.html">Technology</a>
+            </div>
+        </div>
+        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
+
+
+
     <div id="first-section">
         <img class="chaka-img" src="committee/groupphoto.png" />
         <svg class="full" width="40%" viewBox="0 0 200 200">
@@ -141,23 +127,12 @@
 
     <script>
     function myFunction() {
-        var x = document.getElementById("myMainHeader");
-        if (x.className === "mainHeader") {
-            x.className += "responsive";
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+            x.className += " responsive";
         } else {
-            x.className = "mainHeader";
+            x.className = "topnav";
         }
-
-    }
-
-    function dropFunction() {
-        var x = document.getElementById("dropHeader");
-        if (x.className === "dropdown-content") {
-            x.className += "responsive";
-        } else {
-            x.className = "dropdown-content";
-        }
-
     }
     </script>
 
