--- a/committee/ce.html
+++ b/committee/ce.html
@@ -11,7 +11,7 @@
 
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
-        <a href="#home" class="active">Home</a>
+        <a href="#home">Home</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
                 <i class="fa fa-caret-down"></i>
@@ -37,7 +37,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="committee/ce.html">Community Engagement</a>
+                <a href="committee/ce.html" class="active">Community Engagement</a>
                 <a href="committee/legislative.html">Legislative</a>
                 <a href="committee/tech.html">Technology</a>
             </div>
