--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
-        <a href="#home" class="active">Home</a>
+        <a href="/home" class="active">Home</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
                 <i class="fa fa-caret-down"></i>
