--- a/committee/ce.html
+++ b/committee/ce.html
@@ -11,7 +11,7 @@
 
     <div class="topnav" id="myTopnav">
         <img class="TellemLogo" src="SenatorTellemLogo.png" width="150px" align="left"/>
-        <a href="#home">Home</a>
+        <a href="../index.html">Home</a>
         <div class="dropdown">
             <button class="dropbtn">Resources 
                 <i class="fa fa-caret-down"></i>
