--- a/committee/ce.html
+++ b/committee/ce.html
@@ -47,7 +47,7 @@
 
 <div id="container">
     <div id="first-section">
-        <h1>
+        <h1 style="font-size:5vw;">
             Community Engagement
         </h1>
         <p style="max-width:900px; padding: 60px; margin: 0 auto;padding-top: 0px;">
