--- a/index.html
+++ b/index.html
@@ -50,33 +50,12 @@
 
     <div id="first-section">
         <img class="chaka-img" src="committee/groupphoto.png" />
-        <svg class="full" width="40%" viewBox="0 0 200 200">
-            <text fill="white" x="10" y="50%">
-                <tspan x="15%" y="25%">Meet ASUC</tspan>
-                <tspan x="4" y="40%">Senator Tellem's</tspan>
-                <tspan x="62" y="55%">Office</tspan>
-            </text>
-        </svg>
-        <style>
-            svg {
-                position: absolute;
-                top: 61%;
-                right: 30.5%;
-                transform: translate(0, -50%);
-            }
-            text {
-                font-family: sofia-pro, sans-serif;
-                font-size: 1.65em;
-                font-weight: 400;
-                padding: 0;
-            }
-        </style>
     </div>
     <div id="second-section">
         <div class="inner">
-            <img src="SenatorTellem.png" align="LEFT"/>
+            <img src="SenatorTellem.png" align="LEFT" class="imgresponsive"/>
             <div class="bordertext">
-                <h2>SENATOR TELLEM</h2><p>Chaka was elected as the Black Community-Endorsed Senator and is dedicated to assuring that communities on campus have the proper
+                <h2 style="font-size:3vw;">SENATOR TELLEM</h2><p style="font-size:1.75vw;">Chaka was elected as the Black Community-Endorsed Senator and is dedicated to assuring that communities on campus have the proper
                     access, resources, and knowledge to not only survive, but also thrive at Berkeley. The office aims to address Cal's campus climate,
                     advance academic and professional opportunities, and institutionalize environmental justice, while cultivating relationships between
                     different communities on and off campus. Our mission is to make Berkeley more inclusive and supportive for all students by amplifying
@@ -120,7 +99,7 @@
     </div>
     <div id="fourth-section">
         <div class="inner">
-            <img src="ejEvent.jpg" align="LEFT"/><img src="LawEvent.jpg" align="RIGHT"/>
+            <img src="ejEvent.jpg" align="LEFT" class="imgresponsive"/><img src="LawEvent.jpg" align="RIGHT" class="imgresponsive"/>
             <h2>Past Events</h2>
             </div>
     </div>
