--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
 
 
     <div id="first-section">
+        <h2>Meet ASUC Senator Tellem's Office!</h2>
         <img class="chaka-img" src="committee/groupphoto.png" />
     </div>
     <div id="second-section">
         <div class="inner">
             <img src="SenatorTellem.png" align="LEFT" class="imgresponsive"/>
             <div class="bordertext">
-                <h2 style="font-size:3vw;">SENATOR TELLEM</h2><p style="font-size:1.75vw;">Chaka was elected as the Black Community-Endorsed Senator and is dedicated to assuring that communities on campus have the proper
+                <h2>SENATOR TELLEM</h2><p style="font-size:1.75vw;">Chaka was elected as the Black Community-Endorsed Senator and is dedicated to assuring that communities on campus have the proper
                     access, resources, and knowledge to not only survive, but also thrive at Berkeley. The office aims to address Cal's campus climate,
                     advance academic and professional opportunities, and institutionalize environmental justice, while cultivating relationships between
                     different communities on and off campus. Our mission is to make Berkeley more inclusive and supportive for all students by amplifying
